--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 11:42:13 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 11:42:56 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -200,8 +200,8 @@ Not started</td>
 E thru 4</td>
       <td class="greyout leftborder">Viktor Hovland +1
 +1 thru 3</td>
-      <td class="greyout">Xander Schauffele(W) +2
-E thru 3</td>
+      <td class="greyout">Xander Schauffele(W) +3
++1 thru 4</td>
     </tr>
     <tr>
       <td class="bigbold">Hadrian&#39;s Wall</td>
@@ -230,10 +230,10 @@ Not started</td>
 Not started</td>
       <td>Talor Gooch E
 Not started</td>
-      <td class="greyout leftborder">Xander Schauffele +2
+      <td class="greyout leftborder">Brooks Koepka +3
 E thru 3</td>
-      <td class="greyout">Brooks Koepka +3
-E thru 3</td>
+      <td class="greyout">Xander Schauffele +3
++1 thru 4</td>
     </tr>
     <tr>
       <td class="bigbold">The Dub</td>
@@ -246,10 +246,10 @@ Not started</td>
 E thru 4</td>
       <td>Matthew Fitzpatrick E
 +1 thru 3</td>
-      <td class="greyout leftborder">Xander Schauffele +2
+      <td class="greyout leftborder">Brooks Koepka +3
 E thru 3</td>
-      <td class="greyout">Brooks Koepka +3
-E thru 3</td>
+      <td class="greyout">Xander Schauffele +3
++1 thru 4</td>
     </tr>
     <tr>
       <td class="bigbold">Don Shaw</td>
@@ -262,8 +262,8 @@ Not started</td>
 Not started</td>
       <td>Jon Rahm(W) E
 -2 thru 4</td>
-      <td class="greyout leftborder">Xander Schauffele +2
-E thru 3</td>
+      <td class="greyout leftborder">Xander Schauffele +3
++1 thru 4</td>
       <td class="greyout">Sam Burns +5
 +2 thru 6</td>
     </tr>
@@ -294,10 +294,10 @@ Not started</td>
 E thru 4</td>
       <td>Hideki Matsuyama E
 Not started</td>
-      <td class="greyout leftborder">Xander Schauffele +2
-E thru 3</td>
-      <td class="greyout">Jordan Spieth +2
+      <td class="greyout leftborder">Jordan Spieth +2
 E thru 4</td>
+      <td class="greyout">Xander Schauffele +3
++1 thru 4</td>
     </tr>
     <tr>
       <td class="bigbold">Lyle Rattray</td>
@@ -372,12 +372,12 @@ Not started</td>
 Not started</td>
       <td>Patrick Cantlay -2
 E thru 4</td>
-      <td>Xander Schauffele +2
-E thru 3</td>
-      <td class="greyout leftborder">Adam Scott +2
+      <td>Adam Scott +2
 Not started</td>
-      <td class="greyout">Brooks Koepka(W) +3
+      <td class="greyout leftborder">Brooks Koepka(W) +3
 E thru 3</td>
+      <td class="greyout">Xander Schauffele +3
++1 thru 4</td>
     </tr>
     <tr>
       <td class="bigbold">Albert Selina</td>
@@ -392,8 +392,8 @@ E thru 4</td>
 -2 thru 4</td>
       <td class="greyout leftborder">Webb Simpson E
 +1 thru 7</td>
-      <td class="greyout">Xander Schauffele +2
-E thru 3</td>
+      <td class="greyout">Xander Schauffele +3
++1 thru 4</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Wilson</td>
@@ -406,26 +406,10 @@ Not started</td>
 E thru 4</td>
       <td>Jon Rahm E
 -2 thru 4</td>
-      <td class="greyout leftborder">Xander Schauffele +2
-E thru 3</td>
-      <td class="greyout">Jordan Spieth +2
+      <td class="greyout leftborder">Jordan Spieth +2
 E thru 4</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Uphill into the Wind</td>
-      <td class="bigbold">-7</td>
-      <td>Cameron Smith -4
-Not started</td>
-      <td>Scottie Scheffler(W) -3
-Not started</td>
-      <td>Patrick Cantlay -2
-E thru 4</td>
-      <td>Xander Schauffele +2
-E thru 3</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 3</td>
-      <td class="greyout">Billy Horschel +6
-+4 thru 5</td>
+      <td class="greyout">Xander Schauffele +3
++1 thru 4</td>
     </tr>
     <tr>
       <td class="bigbold">The Resort</td>
@@ -502,42 +486,26 @@ Not started</td>
 Not started</td>
       <td>Marc Leishman +1
 E thru 7</td>
-      <td class="greyout leftborder">Xander Schauffele +2
-E thru 3</td>
+      <td class="greyout leftborder">Xander Schauffele +3
++1 thru 4</td>
       <td class="greyout">Justin Thomas +4
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Barb Wellard</td>
-      <td class="bigbold">-5</td>
+      <td class="bigbold">Uphill into the Wind</td>
+      <td class="bigbold">-6</td>
       <td>Cameron Smith -4
 Not started</td>
-      <td>Joaquin Niemann -3
-Not started</td>
-      <td>Jon Rahm(W) E
--2 thru 4</td>
-      <td>Xander Schauffele +2
-E thru 3</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 3</td>
-      <td class="greyout">Sam Burns +5
-+2 thru 6</td>
-    </tr>
-    <tr>
-      <td class="bigbold">New Lu</td>
-      <td class="bigbold">-5</td>
-      <td>Cameron Smith -4
+      <td>Scottie Scheffler(W) -3
 Not started</td>
       <td>Patrick Cantlay -2
 E thru 4</td>
-      <td>Will Zalatoris -1
-E thru 4</td>
-      <td>Xander Schauffele +2
+      <td>Brooks Koepka +3
 E thru 3</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 3</td>
-      <td class="greyout">Justin Thomas(W) +4
-Not started</td>
+      <td class="greyout leftborder">Xander Schauffele +3
++1 thru 4</td>
+      <td class="greyout">Billy Horschel +6
++4 thru 5</td>
     </tr>
     <tr>
       <td class="bigbold">Glitter Girl</td>
@@ -582,8 +550,8 @@ Not started</td>
 -1 thru 3</td>
       <td>Hideki Matsuyama E
 Not started</td>
-      <td class="greyout leftborder">Xander Schauffele +2
-E thru 3</td>
+      <td class="greyout leftborder">Xander Schauffele +3
++1 thru 4</td>
       <td class="greyout">Justin Thomas +4
 Not started</td>
     </tr>
@@ -598,8 +566,8 @@ E thru 4</td>
 -1 thru 3</td>
       <td>Viktor Hovland +1
 +1 thru 3</td>
-      <td class="greyout leftborder">Xander Schauffele +2
-E thru 3</td>
+      <td class="greyout leftborder">Xander Schauffele +3
++1 thru 4</td>
       <td class="greyout">Justin Thomas(W) +4
 Not started</td>
     </tr>
@@ -620,6 +588,22 @@ Not started</td>
 E thru 4</td>
     </tr>
     <tr>
+      <td class="bigbold">Barb Wellard</td>
+      <td class="bigbold">-4</td>
+      <td>Cameron Smith -4
+Not started</td>
+      <td>Joaquin Niemann -3
+Not started</td>
+      <td>Jon Rahm(W) E
+-2 thru 4</td>
+      <td>Brooks Koepka +3
+E thru 3</td>
+      <td class="greyout leftborder">Xander Schauffele +3
++1 thru 4</td>
+      <td class="greyout">Sam Burns +5
++2 thru 6</td>
+    </tr>
+    <tr>
       <td class="bigbold">Grace</td>
       <td class="bigbold">-4</td>
       <td>Corey Conners -3
@@ -632,8 +616,8 @@ E thru 4</td>
 -1 thru 5</td>
       <td class="greyout leftborder">Viktor Hovland +1
 +1 thru 3</td>
-      <td class="greyout">Xander Schauffele(W) +2
-E thru 3</td>
+      <td class="greyout">Xander Schauffele(W) +3
++1 thru 4</td>
     </tr>
     <tr>
       <td class="bigbold">Neil Hardy</td>
@@ -644,11 +628,27 @@ Not started</td>
 -1 thru 9</td>
       <td>Viktor Hovland +1
 +1 thru 3</td>
-      <td>Xander Schauffele +2
-E thru 3</td>
-      <td class="greyout leftborder">Jordan Spieth +2
+      <td>Jordan Spieth +2
 E thru 4</td>
+      <td class="greyout leftborder">Xander Schauffele +3
++1 thru 4</td>
       <td class="greyout">Justin Thomas +4
+Not started</td>
+    </tr>
+    <tr>
+      <td class="bigbold">New Lu</td>
+      <td class="bigbold">-4</td>
+      <td>Cameron Smith -4
+Not started</td>
+      <td>Patrick Cantlay -2
+E thru 4</td>
+      <td>Will Zalatoris -1
+E thru 4</td>
+      <td>Brooks Koepka +3
+E thru 3</td>
+      <td class="greyout leftborder">Xander Schauffele +3
++1 thru 4</td>
+      <td class="greyout">Justin Thomas(W) +4
 Not started</td>
     </tr>
     <tr>
@@ -744,8 +744,8 @@ E thru 4</td>
 -2 thru 4</td>
       <td class="greyout leftborder">Viktor Hovland(W) +1
 +1 thru 3</td>
-      <td class="greyout">Xander Schauffele +2
-E thru 3</td>
+      <td class="greyout">Xander Schauffele +3
++1 thru 4</td>
     </tr>
     <tr>
       <td class="bigbold">Stan and Ollie Garch</td>
@@ -822,8 +822,8 @@ Not started</td>
 -2 thru 4</td>
       <td>Viktor Hovland +1
 +1 thru 3</td>
-      <td class="greyout leftborder">Xander Schauffele +2
-E thru 3</td>
+      <td class="greyout leftborder">Xander Schauffele +3
++1 thru 4</td>
       <td class="greyout">Justin Thomas(W) +4
 Not started</td>
     </tr>
@@ -854,26 +854,10 @@ Not started</td>
 -1 thru 3</td>
       <td>Viktor Hovland +1
 +1 thru 3</td>
-      <td class="greyout leftborder">Xander Schauffele +2
-E thru 3</td>
-      <td class="greyout">Brooks Koepka +3
-E thru 3</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Philip Dale</td>
-      <td class="bigbold">-1</td>
-      <td>Scottie Scheffler -3
-Not started</td>
-      <td>Patrick Cantlay -2
-E thru 4</td>
-      <td>Xander Schauffele +2
-E thru 3</td>
-      <td>Jordan Spieth +2
-E thru 4</td>
       <td class="greyout leftborder">Brooks Koepka +3
 E thru 3</td>
-      <td class="greyout">Justin Thomas(W) +4
-Not started</td>
+      <td class="greyout">Xander Schauffele +3
++1 thru 4</td>
     </tr>
     <tr>
       <td class="bigbold">Brian McDonald</td>
@@ -884,11 +868,27 @@ Not started</td>
 -2 thru 4</td>
       <td>Rory McIlroy E
 -1 thru 3</td>
-      <td>Xander Schauffele +2
-E thru 3</td>
-      <td class="greyout leftborder">Jordan Spieth +2
+      <td>Jordan Spieth +2
 E thru 4</td>
+      <td class="greyout leftborder">Xander Schauffele +3
++1 thru 4</td>
       <td class="greyout">Justin Thomas +4
+Not started</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Philip Dale</td>
+      <td class="bigbold">0</td>
+      <td>Scottie Scheffler -3
+Not started</td>
+      <td>Patrick Cantlay -2
+E thru 4</td>
+      <td>Jordan Spieth +2
+E thru 4</td>
+      <td>Brooks Koepka +3
+E thru 3</td>
+      <td class="greyout leftborder">Xander Schauffele +3
++1 thru 4</td>
+      <td class="greyout">Justin Thomas(W) +4
 Not started</td>
     </tr>
     <tr>
@@ -900,12 +900,12 @@ Not started</td>
 -2 thru 4</td>
       <td>Viktor Hovland +1
 +1 thru 3</td>
-      <td>Xander Schauffele +2
-E thru 3</td>
-      <td class="greyout leftborder">Jordan Spieth +2
+      <td>Jordan Spieth +2
 E thru 4</td>
-      <td class="greyout">Brooks Koepka +3
+      <td class="greyout leftborder">Brooks Koepka +3
 E thru 3</td>
+      <td class="greyout">Xander Schauffele +3
++1 thru 4</td>
     </tr>
     <tr>
       <td class="bigbold">Roy Jeffrey A</td>
@@ -941,34 +941,18 @@ Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Hasbulla</td>
-      <td class="bigbold">0</td>
+      <td class="bigbold">1</td>
       <td>Patrick Cantlay(W) -2
 E thru 4</td>
       <td>Rory McIlroy E
 -1 thru 3</td>
       <td>Jon Rahm E
 -2 thru 4</td>
-      <td>Xander Schauffele +2
-E thru 3</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 3</td>
-      <td class="greyout">Justin Thomas +4
-Not started</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Wylie</td>
-      <td class="bigbold">1</td>
-      <td>Scottie Scheffler -3
-Not started</td>
-      <td>Will Zalatoris -1
-E thru 4</td>
-      <td>Xander Schauffele +2
-E thru 3</td>
       <td>Brooks Koepka +3
 E thru 3</td>
-      <td class="greyout leftborder">Justin Thomas(W) +4
-Not started</td>
-      <td class="greyout">Louis Oosthuizen +4
+      <td class="greyout leftborder">Xander Schauffele +3
++1 thru 4</td>
+      <td class="greyout">Justin Thomas +4
 Not started</td>
     </tr>
     <tr>
@@ -986,22 +970,6 @@ E thru 4</td>
 Not started</td>
       <td class="greyout">Sam Burns +5
 +2 thru 6</td>
-    </tr>
-    <tr>
-      <td class="bigbold">NewCastle Magpies</td>
-      <td class="bigbold">2</td>
-      <td>Patrick Cantlay -2
-E thru 4</td>
-      <td>Collin Morikawa E
--1 thru 5</td>
-      <td>Xander Schauffele +2
-E thru 3</td>
-      <td>Jordan Spieth +2
-E thru 4</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 3</td>
-      <td class="greyout">Justin Thomas(W) +4
-Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
@@ -1036,14 +1004,46 @@ E thru 3</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Benjac</td>
+      <td class="bigbold">Wylie</td>
       <td class="bigbold">2</td>
+      <td>Scottie Scheffler -3
+Not started</td>
+      <td>Will Zalatoris -1
+E thru 4</td>
+      <td>Brooks Koepka +3
+E thru 3</td>
+      <td>Xander Schauffele +3
++1 thru 4</td>
+      <td class="greyout leftborder">Justin Thomas(W) +4
+Not started</td>
+      <td class="greyout">Louis Oosthuizen +4
+Not started</td>
+    </tr>
+    <tr>
+      <td class="bigbold">NewCastle Magpies</td>
+      <td class="bigbold">3</td>
+      <td>Patrick Cantlay -2
+E thru 4</td>
+      <td>Collin Morikawa E
+-1 thru 5</td>
+      <td>Jordan Spieth +2
+E thru 4</td>
+      <td>Brooks Koepka +3
+E thru 3</td>
+      <td class="greyout leftborder">Xander Schauffele +3
++1 thru 4</td>
+      <td class="greyout">Justin Thomas(W) +4
+Not started</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Benjac</td>
+      <td class="bigbold">3</td>
       <td>Cameron Smith -4
 Not started</td>
       <td>Rory McIlroy E
 -1 thru 3</td>
-      <td>Xander Schauffele +2
-E thru 3</td>
+      <td>Xander Schauffele +3
++1 thru 4</td>
       <td>Justin Thomas(W) +4
 Not started</td>
       <td class="greyout leftborder">Sam Burns +5
@@ -1053,31 +1053,31 @@ Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Yellow in Augusta</td>
-      <td class="bigbold">5</td>
+      <td class="bigbold">6</td>
       <td>Jon Rahm E
 -2 thru 4</td>
       <td>Viktor Hovland +1
 +1 thru 3</td>
-      <td>Xander Schauffele +2
-E thru 3</td>
       <td>Jordan Spieth +2
 E thru 4</td>
-      <td class="greyout leftborder">Brooks Koepka +3
+      <td>Brooks Koepka +3
 E thru 3</td>
+      <td class="greyout leftborder">Xander Schauffele +3
++1 thru 4</td>
       <td class="greyout">Justin Thomas(W) +4
 Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Bryan Francis</td>
-      <td class="bigbold">5</td>
+      <td class="bigbold">6</td>
       <td>Jon Rahm E
 -2 thru 4</td>
       <td>Viktor Hovland +1
 +1 thru 3</td>
-      <td>Xander Schauffele +2
-E thru 3</td>
       <td>Jordan Spieth +2
 E thru 4</td>
+      <td>Xander Schauffele +3
++1 thru 4</td>
       <td class="greyout leftborder">Justin Thomas(W) +4
 Not started</td>
       <td class="greyout">Louis Oosthuizen +4
@@ -1085,15 +1085,15 @@ Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Tony Muir</td>
-      <td class="bigbold">6</td>
+      <td class="bigbold">7</td>
       <td>Jon Rahm(W) E
 -2 thru 4</td>
       <td>Viktor Hovland +1
 +1 thru 3</td>
-      <td>Xander Schauffele +2
-E thru 3</td>
       <td>Brooks Koepka +3
 E thru 3</td>
+      <td>Xander Schauffele +3
++1 thru 4</td>
       <td class="greyout leftborder">Louis Oosthuizen +4
 Not started</td>
       <td class="greyout">Justin Thomas +4
