--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 11:42:13 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 11:42:56 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -148,10 +148,10 @@ Not started</td>
 Not started</td>
       <td>Corey Conners -3
 -1 thru 9</td>
-      <td>Xander Schauffele +2
-E thru 3</td>
-      <td class="greyout leftborder">Jordan Spieth +2
+      <td>Jordan Spieth +2
 E thru 4</td>
+      <td class="greyout leftborder">Xander Schauffele +3
++1 thru 4</td>
       <td class="greyout">Sam Burns +5
 +2 thru 6</td>
     </tr>
@@ -214,10 +214,10 @@ E thru 4</td>
 -1 thru 5</td>
       <td>Rory McIlroy E
 -1 thru 3</td>
-      <td class="greyout leftborder">Xander Schauffele +2
+      <td class="greyout leftborder">Brooks Koepka +3
 E thru 3</td>
-      <td class="greyout">Brooks Koepka +3
-E thru 3</td>
+      <td class="greyout">Xander Schauffele +3
++1 thru 4</td>
     </tr>
     <tr>
       <td class="bigbold">Paxton Watson</td>
@@ -292,10 +292,10 @@ Not started</td>
 -1 thru 9</td>
       <td>Viktor Hovland +1
 +1 thru 3</td>
-      <td>Xander Schauffele +2
-E thru 3</td>
-      <td class="greyout leftborder">Jordan Spieth +2
+      <td>Jordan Spieth +2
 E thru 4</td>
+      <td class="greyout leftborder">Xander Schauffele +3
++1 thru 4</td>
       <td class="greyout">Justin Thomas +4
 Not started</td>
     </tr>
@@ -349,35 +349,19 @@ E thru 3</td>
     </tr>
     <tr>
       <td class="bigbold">Jamie Watters</td>
-      <td class="bigbold">-1</td>
+      <td class="bigbold">0</td>
       <td>Dustin Johnson -4
 -1 thru 5</td>
       <td>Corey Conners -3
 -1 thru 9</td>
-      <td>Xander Schauffele(W) +2
-E thru 3</td>
+      <td>Xander Schauffele(W) +3
++1 thru 4</td>
       <td>Justin Thomas +4
 Not started</td>
       <td class="greyout leftborder">Louis Oosthuizen +4
 Not started</td>
       <td class="greyout">Russell Henley +4
 +3 thru 9</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Adam Ryan</td>
-      <td class="bigbold">1</td>
-      <td>Corey Conners -3
--1 thru 9</td>
-      <td>Jon Rahm E
--2 thru 4</td>
-      <td>Xander Schauffele +2
-E thru 3</td>
-      <td>Jordan Spieth +2
-E thru 4</td>
-      <td class="greyout leftborder">Justin Thomas(W) +4
-Not started</td>
-      <td class="greyout">Louis Oosthuizen +4
-Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
@@ -393,6 +377,22 @@ Not started</td>
       <td class="greyout leftborder">Brooks Koepka +3
 E thru 3</td>
       <td class="greyout">Luke List +5
+Not started</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Adam Ryan</td>
+      <td class="bigbold">2</td>
+      <td>Corey Conners -3
+-1 thru 9</td>
+      <td>Jon Rahm E
+-2 thru 4</td>
+      <td>Jordan Spieth +2
+E thru 4</td>
+      <td>Xander Schauffele +3
++1 thru 4</td>
+      <td class="greyout leftborder">Justin Thomas(W) +4
+Not started</td>
+      <td class="greyout">Louis Oosthuizen +4
 Not started</td>
     </tr>
   </tbody>
