--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 11:43:39 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 11:44:22 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -166,8 +166,8 @@ Not started</td>
 Not started</td>
       <td>Tyrrell Hatton -1
 -1 thru 6</td>
-      <td class="greyout leftborder">Viktor Hovland(W) +1
-+1 thru 3</td>
+      <td class="greyout leftborder">Viktor Hovland(W) +2
++2 thru 4</td>
       <td class="greyout">Sam Burns +5
 +2 thru 6</td>
     </tr>
@@ -198,8 +198,8 @@ Not started</td>
 Not started</td>
       <td>Will Zalatoris -1
 E thru 4</td>
-      <td class="greyout leftborder">Viktor Hovland +1
-+1 thru 3</td>
+      <td class="greyout leftborder">Viktor Hovland +2
++2 thru 4</td>
       <td class="greyout">Xander Schauffele(W) +3
 +1 thru 4</td>
     </tr>
@@ -216,8 +216,8 @@ E thru 4</td>
 E thru 4</td>
       <td class="greyout leftborder">Jon Rahm(W) E
 -2 thru 4</td>
-      <td class="greyout">Viktor Hovland +1
-+1 thru 3</td>
+      <td class="greyout">Viktor Hovland +2
++2 thru 4</td>
     </tr>
     <tr>
       <td class="bigbold">Luke Watson</td>
@@ -310,8 +310,8 @@ Not started</td>
 E thru 4</td>
       <td>Jon Rahm E
 -2 thru 4</td>
-      <td class="greyout leftborder">Viktor Hovland +1
-+1 thru 3</td>
+      <td class="greyout leftborder">Viktor Hovland +2
++2 thru 4</td>
       <td class="greyout">Sam Burns +5
 +2 thru 6</td>
     </tr>
@@ -324,10 +324,10 @@ Not started</td>
 Not started</td>
       <td>Patrick Cantlay -2
 E thru 4</td>
-      <td>Viktor Hovland +1
-+1 thru 3</td>
-      <td class="greyout leftborder">Shane Lowry +1
+      <td>Shane Lowry +1
 Not started</td>
+      <td class="greyout leftborder">Viktor Hovland +2
++2 thru 4</td>
       <td class="greyout">Brooks Koepka +3
 E thru 3</td>
     </tr>
@@ -422,10 +422,10 @@ Not started</td>
 Not started</td>
       <td>Jon Rahm E
 -2 thru 4</td>
-      <td class="greyout leftborder">Viktor Hovland +1
-+1 thru 3</td>
-      <td class="greyout">Shane Lowry +1
+      <td class="greyout leftborder">Shane Lowry +1
 Not started</td>
+      <td class="greyout">Viktor Hovland +2
++2 thru 4</td>
     </tr>
     <tr>
       <td class="bigbold">Ron Harrington</td>
@@ -454,8 +454,8 @@ E thru 4</td>
 -1 thru 3</td>
       <td>Jon Rahm E
 -2 thru 4</td>
-      <td class="greyout leftborder">Viktor Hovland +1
-+1 thru 3</td>
+      <td class="greyout leftborder">Viktor Hovland +2
++2 thru 4</td>
       <td class="greyout">Jordan Spieth +2
 E thru 4</td>
     </tr>
@@ -518,26 +518,10 @@ Not started</td>
 -2 thru 4</td>
       <td>Rory McIlroy E
 -1 thru 3</td>
-      <td class="greyout leftborder">Viktor Hovland +1
-+1 thru 3</td>
+      <td class="greyout leftborder">Viktor Hovland +2
++2 thru 4</td>
       <td class="greyout">Jordan Spieth +2
 E thru 4</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">-5</td>
-      <td>Dustin Johnson -4
--1 thru 5</td>
-      <td>Patrick Cantlay -2
-E thru 4</td>
-      <td>Jon Rahm E
--2 thru 4</td>
-      <td>Viktor Hovland +1
-+1 thru 3</td>
-      <td class="greyout leftborder">Jordan Spieth(W) +2
-E thru 4</td>
-      <td class="greyout">Brooks Koepka +3
-E thru 3</td>
     </tr>
     <tr>
       <td class="bigbold">Jack Fleck</td>
@@ -553,22 +537,6 @@ Not started</td>
       <td class="greyout leftborder">Xander Schauffele +3
 +1 thru 4</td>
       <td class="greyout">Justin Thomas +4
-Not started</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Santorini Sunsets</td>
-      <td class="bigbold">-4</td>
-      <td>Scottie Scheffler -3
-Not started</td>
-      <td>Patrick Cantlay -2
-E thru 4</td>
-      <td>Rory McIlroy E
--1 thru 3</td>
-      <td>Viktor Hovland +1
-+1 thru 3</td>
-      <td class="greyout leftborder">Xander Schauffele +3
-+1 thru 4</td>
-      <td class="greyout">Justin Thomas(W) +4
 Not started</td>
     </tr>
     <tr>
@@ -614,26 +582,10 @@ E thru 4</td>
 -1 thru 3</td>
       <td>Collin Morikawa E
 -1 thru 5</td>
-      <td class="greyout leftborder">Viktor Hovland +1
-+1 thru 3</td>
+      <td class="greyout leftborder">Viktor Hovland +2
++2 thru 4</td>
       <td class="greyout">Xander Schauffele(W) +3
 +1 thru 4</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">-4</td>
-      <td>Cameron Smith(W) -4
-Not started</td>
-      <td>Corey Conners -3
--1 thru 9</td>
-      <td>Viktor Hovland +1
-+1 thru 3</td>
-      <td>Jordan Spieth +2
-E thru 4</td>
-      <td class="greyout leftborder">Xander Schauffele +3
-+1 thru 4</td>
-      <td class="greyout">Justin Thomas +4
-Not started</td>
     </tr>
     <tr>
       <td class="bigbold">New Lu</td>
@@ -700,36 +652,36 @@ E thru 4</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Baggy Pants</td>
+      <td class="bigbold">Matt Tummon</td>
       <td class="bigbold">-4</td>
-      <td>Cameron Smith -4
+      <td>Dustin Johnson -4
+-1 thru 5</td>
+      <td>Patrick Cantlay -2
+E thru 4</td>
+      <td>Jon Rahm E
+-2 thru 4</td>
+      <td>Jordan Spieth(W) +2
+E thru 4</td>
+      <td class="greyout leftborder">Viktor Hovland +2
++2 thru 4</td>
+      <td class="greyout">Brooks Koepka +3
+E thru 3</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Santorini Sunsets</td>
+      <td class="bigbold">-3</td>
+      <td>Scottie Scheffler -3
 Not started</td>
       <td>Patrick Cantlay -2
 E thru 4</td>
-      <td>Viktor Hovland +1
-+1 thru 3</td>
-      <td>Shane Lowry +1
-Not started</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 3</td>
+      <td>Rory McIlroy E
+-1 thru 3</td>
+      <td>Viktor Hovland +2
++2 thru 4</td>
+      <td class="greyout leftborder">Xander Schauffele +3
++1 thru 4</td>
       <td class="greyout">Justin Thomas(W) +4
 Not started</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Low Golf IQ</td>
-      <td class="bigbold">-4</td>
-      <td>Corey Conners -3
--1 thru 9</td>
-      <td>Joaquin Niemann -3
-Not started</td>
-      <td>Shane Lowry(W) +1
-Not started</td>
-      <td>Viktor Hovland +1
-+1 thru 3</td>
-      <td class="greyout leftborder">Brian Harman +2
-Not started</td>
-      <td class="greyout">Sam Burns +5
-+2 thru 6</td>
     </tr>
     <tr>
       <td class="bigbold">Walk 1</td>
@@ -742,10 +694,26 @@ E thru 4</td>
 -1 thru 5</td>
       <td>Jon Rahm E
 -2 thru 4</td>
-      <td class="greyout leftborder">Viktor Hovland(W) +1
-+1 thru 3</td>
+      <td class="greyout leftborder">Viktor Hovland(W) +2
++2 thru 4</td>
       <td class="greyout">Xander Schauffele +3
 +1 thru 4</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Neil Hardy</td>
+      <td class="bigbold">-3</td>
+      <td>Cameron Smith(W) -4
+Not started</td>
+      <td>Corey Conners -3
+-1 thru 9</td>
+      <td>Viktor Hovland +2
++2 thru 4</td>
+      <td>Jordan Spieth +2
+E thru 4</td>
+      <td class="greyout leftborder">Xander Schauffele +3
++1 thru 4</td>
+      <td class="greyout">Justin Thomas +4
+Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Stan and Ollie Garch</td>
@@ -764,6 +732,22 @@ E thru 3</td>
 Not started</td>
     </tr>
     <tr>
+      <td class="bigbold">Baggy Pants</td>
+      <td class="bigbold">-3</td>
+      <td>Cameron Smith -4
+Not started</td>
+      <td>Patrick Cantlay -2
+E thru 4</td>
+      <td>Shane Lowry +1
+Not started</td>
+      <td>Viktor Hovland +2
++2 thru 4</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+E thru 3</td>
+      <td class="greyout">Justin Thomas(W) +4
+Not started</td>
+    </tr>
+    <tr>
       <td class="bigbold">Neville Spillman</td>
       <td class="bigbold">-3</td>
       <td>Scottie Scheffler -3
@@ -776,6 +760,22 @@ E thru 4</td>
 E thru 4</td>
       <td class="greyout leftborder">Brooks Koepka +3
 E thru 3</td>
+      <td class="greyout">Sam Burns +5
++2 thru 6</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Low Golf IQ</td>
+      <td class="bigbold">-3</td>
+      <td>Corey Conners -3
+-1 thru 9</td>
+      <td>Joaquin Niemann -3
+Not started</td>
+      <td>Shane Lowry(W) +1
+Not started</td>
+      <td>Brian Harman +2
+Not started</td>
+      <td class="greyout leftborder">Viktor Hovland +2
++2 thru 4</td>
       <td class="greyout">Sam Burns +5
 +2 thru 6</td>
     </tr>
@@ -812,22 +812,6 @@ E thru 4</td>
 Out With Injury</td>
     </tr>
     <tr>
-      <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">-2</td>
-      <td>Patrick Cantlay -2
-E thru 4</td>
-      <td>Daniel Berger -1
-Not started</td>
-      <td>Jon Rahm E
--2 thru 4</td>
-      <td>Viktor Hovland +1
-+1 thru 3</td>
-      <td class="greyout leftborder">Xander Schauffele +3
-+1 thru 4</td>
-      <td class="greyout">Justin Thomas(W) +4
-Not started</td>
-    </tr>
-    <tr>
       <td class="bigbold">Ez Game Ez Life</td>
       <td class="bigbold">-2</td>
       <td>Tiger Woods(W) -1
@@ -838,26 +822,26 @@ E thru 4</td>
 -1 thru 3</td>
       <td>Collin Morikawa E
 -1 thru 5</td>
-      <td class="greyout leftborder">Viktor Hovland +1
-+1 thru 3</td>
+      <td class="greyout leftborder">Viktor Hovland +2
++2 thru 4</td>
       <td class="greyout">Justin Thomas +4
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Fred Jamieson</td>
-      <td class="bigbold">-2</td>
-      <td>Scottie Scheffler -3
+      <td class="bigbold">Al Shulman</td>
+      <td class="bigbold">-1</td>
+      <td>Patrick Cantlay -2
+E thru 4</td>
+      <td>Daniel Berger -1
 Not started</td>
-      <td>Jon Rahm(W) E
+      <td>Jon Rahm E
 -2 thru 4</td>
-      <td>Rory McIlroy E
--1 thru 3</td>
-      <td>Viktor Hovland +1
-+1 thru 3</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 3</td>
-      <td class="greyout">Xander Schauffele +3
+      <td>Viktor Hovland +2
++2 thru 4</td>
+      <td class="greyout leftborder">Xander Schauffele +3
 +1 thru 4</td>
+      <td class="greyout">Justin Thomas(W) +4
+Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Brian McDonald</td>
@@ -876,6 +860,22 @@ E thru 4</td>
 Not started</td>
     </tr>
     <tr>
+      <td class="bigbold">Fred Jamieson</td>
+      <td class="bigbold">-1</td>
+      <td>Scottie Scheffler -3
+Not started</td>
+      <td>Jon Rahm(W) E
+-2 thru 4</td>
+      <td>Rory McIlroy E
+-1 thru 3</td>
+      <td>Viktor Hovland +2
++2 thru 4</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+E thru 3</td>
+      <td class="greyout">Xander Schauffele +3
++1 thru 4</td>
+    </tr>
+    <tr>
       <td class="bigbold">Philip Dale</td>
       <td class="bigbold">0</td>
       <td>Scottie Scheffler -3
@@ -890,22 +890,6 @@ E thru 3</td>
 +1 thru 4</td>
       <td class="greyout">Justin Thomas(W) +4
 Not started</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Chris Bryson</td>
-      <td class="bigbold">0</td>
-      <td>Scottie Scheffler -3
-Not started</td>
-      <td>Jon Rahm(W) E
--2 thru 4</td>
-      <td>Viktor Hovland +1
-+1 thru 3</td>
-      <td>Jordan Spieth +2
-E thru 4</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 3</td>
-      <td class="greyout">Xander Schauffele +3
-+1 thru 4</td>
     </tr>
     <tr>
       <td class="bigbold">Roy Jeffrey A</td>
@@ -924,16 +908,32 @@ E thru 3</td>
 Not started</td>
     </tr>
     <tr>
+      <td class="bigbold">Chris Bryson</td>
+      <td class="bigbold">1</td>
+      <td>Scottie Scheffler -3
+Not started</td>
+      <td>Jon Rahm(W) E
+-2 thru 4</td>
+      <td>Viktor Hovland +2
++2 thru 4</td>
+      <td>Jordan Spieth +2
+E thru 4</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+E thru 3</td>
+      <td class="greyout">Xander Schauffele +3
++1 thru 4</td>
+    </tr>
+    <tr>
       <td class="bigbold">Downhill Down Wind</td>
-      <td class="bigbold">0</td>
+      <td class="bigbold">1</td>
       <td>Tiger Woods -1
 Not started</td>
       <td>Collin Morikawa(W) E
 -1 thru 5</td>
       <td>Rory McIlroy E
 -1 thru 3</td>
-      <td>Viktor Hovland +1
-+1 thru 3</td>
+      <td>Viktor Hovland +2
++2 thru 4</td>
       <td class="greyout leftborder">Justin Thomas +4
 Not started</td>
       <td class="greyout">Gary Woodland +4
@@ -956,54 +956,6 @@ E thru 3</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Glen Wilson</td>
-      <td class="bigbold">2</td>
-      <td>Will Zalatoris -1
-E thru 4</td>
-      <td>Jon Rahm E
--2 thru 4</td>
-      <td>Viktor Hovland +1
-+1 thru 3</td>
-      <td>Jordan Spieth +2
-E thru 4</td>
-      <td class="greyout leftborder">Justin Thomas(W) +4
-Not started</td>
-      <td class="greyout">Sam Burns +5
-+2 thru 6</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">2</td>
-      <td>Collin Morikawa E
--1 thru 5</td>
-      <td>Jon Rahm E
--2 thru 4</td>
-      <td>Viktor Hovland(W) +1
-+1 thru 3</td>
-      <td>Patrick Reed +1
--1 thru 8</td>
-      <td class="greyout leftborder">Jordan Spieth +2
-E thru 4</td>
-      <td class="greyout">Brooks Koepka +3
-E thru 3</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Kash Ahmad</td>
-      <td class="bigbold">2</td>
-      <td>Will Zalatoris -1
-E thru 4</td>
-      <td>Jon Rahm(W) E
--2 thru 4</td>
-      <td>Viktor Hovland +1
-+1 thru 3</td>
-      <td>Jordan Spieth +2
-E thru 4</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 3</td>
-      <td class="greyout">Justin Thomas +4
-Not started</td>
-    </tr>
-    <tr>
       <td class="bigbold">Wylie</td>
       <td class="bigbold">2</td>
       <td>Scottie Scheffler -3
@@ -1020,6 +972,22 @@ Not started</td>
 Not started</td>
     </tr>
     <tr>
+      <td class="bigbold">Glen Wilson</td>
+      <td class="bigbold">3</td>
+      <td>Will Zalatoris -1
+E thru 4</td>
+      <td>Jon Rahm E
+-2 thru 4</td>
+      <td>Viktor Hovland +2
++2 thru 4</td>
+      <td>Jordan Spieth +2
+E thru 4</td>
+      <td class="greyout leftborder">Justin Thomas(W) +4
+Not started</td>
+      <td class="greyout">Sam Burns +5
++2 thru 6</td>
+    </tr>
+    <tr>
       <td class="bigbold">NewCastle Magpies</td>
       <td class="bigbold">3</td>
       <td>Patrick Cantlay -2
@@ -1033,6 +1001,38 @@ E thru 3</td>
       <td class="greyout leftborder">Xander Schauffele +3
 +1 thru 4</td>
       <td class="greyout">Justin Thomas(W) +4
+Not started</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jeff Turnham</td>
+      <td class="bigbold">3</td>
+      <td>Collin Morikawa E
+-1 thru 5</td>
+      <td>Jon Rahm E
+-2 thru 4</td>
+      <td>Patrick Reed +1
+-1 thru 8</td>
+      <td>Viktor Hovland(W) +2
++2 thru 4</td>
+      <td class="greyout leftborder">Jordan Spieth +2
+E thru 4</td>
+      <td class="greyout">Brooks Koepka +3
+E thru 3</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Kash Ahmad</td>
+      <td class="bigbold">3</td>
+      <td>Will Zalatoris -1
+E thru 4</td>
+      <td>Jon Rahm(W) E
+-2 thru 4</td>
+      <td>Viktor Hovland +2
++2 thru 4</td>
+      <td>Jordan Spieth +2
+E thru 4</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+E thru 3</td>
+      <td class="greyout">Justin Thomas +4
 Not started</td>
     </tr>
     <tr>
@@ -1053,11 +1053,11 @@ Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Yellow in Augusta</td>
-      <td class="bigbold">6</td>
+      <td class="bigbold">7</td>
       <td>Jon Rahm E
 -2 thru 4</td>
-      <td>Viktor Hovland +1
-+1 thru 3</td>
+      <td>Viktor Hovland +2
++2 thru 4</td>
       <td>Jordan Spieth +2
 E thru 4</td>
       <td>Brooks Koepka +3
@@ -1069,11 +1069,11 @@ Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Bryan Francis</td>
-      <td class="bigbold">6</td>
+      <td class="bigbold">7</td>
       <td>Jon Rahm E
 -2 thru 4</td>
-      <td>Viktor Hovland +1
-+1 thru 3</td>
+      <td>Viktor Hovland +2
++2 thru 4</td>
       <td>Jordan Spieth +2
 E thru 4</td>
       <td>Xander Schauffele +3
@@ -1085,11 +1085,11 @@ Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Tony Muir</td>
-      <td class="bigbold">7</td>
+      <td class="bigbold">8</td>
       <td>Jon Rahm(W) E
 -2 thru 4</td>
-      <td>Viktor Hovland +1
-+1 thru 3</td>
+      <td>Viktor Hovland +2
++2 thru 4</td>
       <td>Brooks Koepka +3
 E thru 3</td>
       <td>Xander Schauffele +3
