--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 11:43:39 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 11:44:22 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -188,22 +188,6 @@ Not started</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Scott Williamson</td>
-      <td class="bigbold">-6</td>
-      <td>Sungjae Im -5
-E thru 7</td>
-      <td>Patrick Cantlay -2
-E thru 4</td>
-      <td>Collin Morikawa E
--1 thru 5</td>
-      <td>Viktor Hovland(W) +1
-+1 thru 3</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 3</td>
-      <td class="greyout">Justin Thomas +4
-Not started</td>
-    </tr>
-    <tr>
       <td class="bigbold">John Nixon</td>
       <td class="bigbold">-6</td>
       <td>Cameron Smith(W) -4
@@ -220,36 +204,36 @@ E thru 3</td>
 +1 thru 4</td>
     </tr>
     <tr>
+      <td class="bigbold">Scott Williamson</td>
+      <td class="bigbold">-5</td>
+      <td>Sungjae Im -5
+E thru 7</td>
+      <td>Patrick Cantlay -2
+E thru 4</td>
+      <td>Collin Morikawa E
+-1 thru 5</td>
+      <td>Viktor Hovland(W) +2
++2 thru 4</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+E thru 3</td>
+      <td class="greyout">Justin Thomas +4
+Not started</td>
+    </tr>
+    <tr>
       <td class="bigbold">Paxton Watson</td>
-      <td class="bigbold">-6</td>
+      <td class="bigbold">-5</td>
       <td>Cameron Smith -4
 Not started</td>
       <td>Joaquin Niemann -3
 Not started</td>
       <td>Rory McIlroy E
 -1 thru 3</td>
-      <td>Viktor Hovland +1
-+1 thru 3</td>
+      <td>Viktor Hovland +2
++2 thru 4</td>
       <td class="greyout leftborder">Tommy Fleetwood(W) +3
 Not started</td>
       <td class="greyout">Justin Thomas +4
 Not started</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">-5</td>
-      <td>Dustin Johnson -4
--1 thru 5</td>
-      <td>Patrick Cantlay -2
-E thru 4</td>
-      <td>Jon Rahm E
--2 thru 4</td>
-      <td>Viktor Hovland +1
-+1 thru 3</td>
-      <td class="greyout leftborder">Jordan Spieth(W) +2
-E thru 4</td>
-      <td class="greyout">Brooks Koepka +3
-E thru 3</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
@@ -284,20 +268,20 @@ E thru 4</td>
 +1 thru 10</td>
     </tr>
     <tr>
-      <td class="bigbold">Neil Hardy</td>
+      <td class="bigbold">Matt Tummon</td>
       <td class="bigbold">-4</td>
-      <td>Cameron Smith(W) -4
-Not started</td>
-      <td>Corey Conners -3
--1 thru 9</td>
-      <td>Viktor Hovland +1
-+1 thru 3</td>
-      <td>Jordan Spieth +2
+      <td>Dustin Johnson -4
+-1 thru 5</td>
+      <td>Patrick Cantlay -2
 E thru 4</td>
-      <td class="greyout leftborder">Xander Schauffele +3
-+1 thru 4</td>
-      <td class="greyout">Justin Thomas +4
-Not started</td>
+      <td>Jon Rahm E
+-2 thru 4</td>
+      <td>Jordan Spieth(W) +2
+E thru 4</td>
+      <td class="greyout leftborder">Viktor Hovland +2
++2 thru 4</td>
+      <td class="greyout">Brooks Koepka +3
+E thru 3</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
@@ -348,6 +332,22 @@ E thru 4</td>
 E thru 3</td>
     </tr>
     <tr>
+      <td class="bigbold">Neil Hardy</td>
+      <td class="bigbold">-3</td>
+      <td>Cameron Smith(W) -4
+Not started</td>
+      <td>Corey Conners -3
+-1 thru 9</td>
+      <td>Viktor Hovland +2
++2 thru 4</td>
+      <td>Jordan Spieth +2
+E thru 4</td>
+      <td class="greyout leftborder">Xander Schauffele +3
++1 thru 4</td>
+      <td class="greyout">Justin Thomas +4
+Not started</td>
+    </tr>
+    <tr>
       <td class="bigbold">Jamie Watters</td>
       <td class="bigbold">0</td>
       <td>Dustin Johnson -4
@@ -364,22 +364,6 @@ Not started</td>
 +3 thru 9</td>
     </tr>
     <tr>
-      <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">2</td>
-      <td>Jon Rahm E
--2 thru 4</td>
-      <td>Collin Morikawa E
--1 thru 5</td>
-      <td>Viktor Hovland(W) +1
-+1 thru 3</td>
-      <td>Patrick Reed +1
--1 thru 8</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 3</td>
-      <td class="greyout">Luke List +5
-Not started</td>
-    </tr>
-    <tr>
       <td class="bigbold">Adam Ryan</td>
       <td class="bigbold">2</td>
       <td>Corey Conners -3
@@ -393,6 +377,22 @@ E thru 4</td>
       <td class="greyout leftborder">Justin Thomas(W) +4
 Not started</td>
       <td class="greyout">Louis Oosthuizen +4
+Not started</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jeff Turnham</td>
+      <td class="bigbold">3</td>
+      <td>Jon Rahm E
+-2 thru 4</td>
+      <td>Collin Morikawa E
+-1 thru 5</td>
+      <td>Patrick Reed +1
+-1 thru 8</td>
+      <td>Viktor Hovland(W) +2
++2 thru 4</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+E thru 3</td>
+      <td class="greyout">Luke List +5
 Not started</td>
     </tr>
   </tbody>
