--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 11:45:05 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 11:45:48 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -344,8 +344,8 @@ E thru 4</td>
 -1 thru 3</td>
       <td class="greyout leftborder">Jon Rahm E
 -2 thru 4</td>
-      <td class="greyout">Robert MacIntyre +2
-+1 thru 10</td>
+      <td class="greyout">Robert MacIntyre +3
++2 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Jon Hosegood</td>
@@ -550,10 +550,10 @@ Not started</td>
 -1 thru 5</td>
       <td>Jon Rahm E
 -2 thru 4</td>
-      <td class="greyout leftborder">Robert MacIntyre +2
-+1 thru 10</td>
-      <td class="greyout">Jordan Spieth +2
+      <td class="greyout leftborder">Jordan Spieth +2
 E thru 4</td>
+      <td class="greyout">Robert MacIntyre +3
++2 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Barb Wellard</td>
