--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 11:47:57 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 11:48:40 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -172,22 +172,6 @@ Not started</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Derrick Shea</td>
-      <td class="bigbold">-6</td>
-      <td>Corey Conners -3
--1 thru 9</td>
-      <td>Patrick Cantlay -2
-E thru 4</td>
-      <td>Tyrrell Hatton -1
--1 thru 6</td>
-      <td>Jon Rahm E
--2 thru 4</td>
-      <td class="greyout leftborder">Shane Lowry +1
-Not started</td>
-      <td class="greyout">Justin Thomas(W) +4
-Not started</td>
-    </tr>
-    <tr>
       <td class="bigbold">John Nixon</td>
       <td class="bigbold">-6</td>
       <td>Cameron Smith(W) -4
@@ -202,6 +186,22 @@ E thru 4</td>
 E thru 3</td>
       <td class="greyout">Xander Schauffele +3
 +1 thru 4</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Derrick Shea</td>
+      <td class="bigbold">-5</td>
+      <td>Corey Conners -3
+-1 thru 9</td>
+      <td>Patrick Cantlay -2
+E thru 4</td>
+      <td>Tyrrell Hatton -1
+-1 thru 6</td>
+      <td>Jon Rahm +1
+-1 thru 5</td>
+      <td class="greyout leftborder">Shane Lowry +1
+Not started</td>
+      <td class="greyout">Justin Thomas(W) +4
+Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Scott Williamson</td>
@@ -252,54 +252,6 @@ E thru 3</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">-4</td>
-      <td>Corey Conners(W) -3
--1 thru 9</td>
-      <td>Daniel Berger -1
-Not started</td>
-      <td>Collin Morikawa E
--1 thru 5</td>
-      <td>Jon Rahm E
--2 thru 4</td>
-      <td class="greyout leftborder">Jordan Spieth +2
-E thru 4</td>
-      <td class="greyout">Robert MacIntyre +3
-+2 thru 11</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">-4</td>
-      <td>Dustin Johnson -4
--1 thru 5</td>
-      <td>Patrick Cantlay -2
-E thru 4</td>
-      <td>Jon Rahm E
--2 thru 4</td>
-      <td>Jordan Spieth(W) +2
-E thru 4</td>
-      <td class="greyout leftborder">Viktor Hovland +2
-+2 thru 4</td>
-      <td class="greyout">Brooks Koepka +3
-E thru 3</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Chris Bryson</td>
-      <td class="bigbold">-3</td>
-      <td>Scottie Scheffler(W) -3
-Not started</td>
-      <td>Will Zalatoris -1
-E thru 5</td>
-      <td>Jon Rahm E
--2 thru 4</td>
-      <td>Shane Lowry +1
-Not started</td>
-      <td class="greyout leftborder">Jordan Spieth +2
-E thru 4</td>
-      <td class="greyout">Brooks Koepka +3
-E thru 3</td>
-    </tr>
-    <tr>
       <td class="bigbold">Al Shulman</td>
       <td class="bigbold">-3</td>
       <td>Will Zalatoris -1
@@ -316,18 +268,34 @@ E thru 3</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Shane Tummon</td>
+      <td class="bigbold">Chris Sinclair</td>
       <td class="bigbold">-3</td>
-      <td>Patrick Cantlay -2
-E thru 4</td>
-      <td>Tony Finau -1
+      <td>Corey Conners(W) -3
+-1 thru 9</td>
+      <td>Daniel Berger -1
 Not started</td>
-      <td>Jon Rahm(W) E
--2 thru 4</td>
       <td>Collin Morikawa E
+-1 thru 5</td>
+      <td>Jon Rahm +1
 -1 thru 5</td>
       <td class="greyout leftborder">Jordan Spieth +2
 E thru 4</td>
+      <td class="greyout">Robert MacIntyre +3
++2 thru 11</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Matt Tummon</td>
+      <td class="bigbold">-3</td>
+      <td>Dustin Johnson -4
+-1 thru 5</td>
+      <td>Patrick Cantlay -2
+E thru 4</td>
+      <td>Jon Rahm +1
+-1 thru 5</td>
+      <td>Jordan Spieth(W) +2
+E thru 4</td>
+      <td class="greyout leftborder">Viktor Hovland +2
++2 thru 4</td>
       <td class="greyout">Brooks Koepka +3
 E thru 3</td>
     </tr>
@@ -348,6 +316,38 @@ E thru 4</td>
 Not started</td>
     </tr>
     <tr>
+      <td class="bigbold">Chris Bryson</td>
+      <td class="bigbold">-2</td>
+      <td>Scottie Scheffler(W) -3
+Not started</td>
+      <td>Will Zalatoris -1
+E thru 5</td>
+      <td>Jon Rahm +1
+-1 thru 5</td>
+      <td>Shane Lowry +1
+Not started</td>
+      <td class="greyout leftborder">Jordan Spieth +2
+E thru 4</td>
+      <td class="greyout">Brooks Koepka +3
+E thru 3</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Shane Tummon</td>
+      <td class="bigbold">-2</td>
+      <td>Patrick Cantlay -2
+E thru 4</td>
+      <td>Tony Finau -1
+Not started</td>
+      <td>Collin Morikawa E
+-1 thru 5</td>
+      <td>Jon Rahm(W) +1
+-1 thru 5</td>
+      <td class="greyout leftborder">Jordan Spieth +2
+E thru 4</td>
+      <td class="greyout">Brooks Koepka +3
+E thru 3</td>
+    </tr>
+    <tr>
       <td class="bigbold">Jamie Watters</td>
       <td class="bigbold">0</td>
       <td>Dustin Johnson -4
@@ -365,11 +365,11 @@ Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Adam Ryan</td>
-      <td class="bigbold">2</td>
+      <td class="bigbold">3</td>
       <td>Corey Conners -3
 -1 thru 9</td>
-      <td>Jon Rahm E
--2 thru 4</td>
+      <td>Jon Rahm +1
+-1 thru 5</td>
       <td>Jordan Spieth +2
 E thru 4</td>
       <td>Xander Schauffele +3
@@ -381,10 +381,10 @@ Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">3</td>
-      <td>Jon Rahm E
--2 thru 4</td>
+      <td class="bigbold">4</td>
       <td>Collin Morikawa E
+-1 thru 5</td>
+      <td>Jon Rahm +1
 -1 thru 5</td>
       <td>Patrick Reed +1
 -1 thru 9</td>
