--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 11:55:50 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 11:56:33 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -168,8 +168,8 @@ Not started</td>
 -1 thru 6</td>
       <td class="greyout leftborder">Viktor Hovland(W) +2
 +2 thru 4</td>
-      <td class="greyout">Sam Burns +5
-+2 thru 6</td>
+      <td class="greyout">Sam Burns +6
++3 thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Paxton Watson</td>
@@ -280,8 +280,8 @@ Not started</td>
 -1 thru 5</td>
       <td class="greyout leftborder">Xander Schauffele +3
 +1 thru 4</td>
-      <td class="greyout">Sam Burns +5
-+2 thru 6</td>
+      <td class="greyout">Sam Burns +6
++3 thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Albert Selina</td>
@@ -344,8 +344,8 @@ Not started</td>
 -1 thru 4</td>
       <td class="greyout leftborder">Jon Rahm +1
 -1 thru 5</td>
-      <td class="greyout">Robert MacIntyre +3
-+2 thru 11</td>
+      <td class="greyout">Robert MacIntyre +2
++1 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Ron Harrington</td>
@@ -424,8 +424,8 @@ Not started</td>
 -1 thru 5</td>
       <td class="greyout leftborder">Viktor Hovland +2
 +2 thru 4</td>
-      <td class="greyout">Sam Burns +5
-+2 thru 6</td>
+      <td class="greyout">Sam Burns +6
++3 thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Bill Hunter</td>
@@ -472,8 +472,8 @@ Not started</td>
 E thru 4</td>
       <td class="greyout leftborder">Louis Oosthuizen +4
 Not started</td>
-      <td class="greyout">Sam Burns +5
-+2 thru 6</td>
+      <td class="greyout">Sam Burns +6
++3 thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Uphill into the Wind</td>
@@ -584,8 +584,8 @@ Not started</td>
 E thru 4</td>
       <td class="greyout leftborder">Xander Schauffele +3
 +1 thru 4</td>
-      <td class="greyout">Sam Burns +5
-+2 thru 6</td>
+      <td class="greyout">Sam Burns +6
++3 thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Grace</td>
@@ -680,8 +680,8 @@ Not started</td>
 Not started</td>
       <td class="greyout leftborder">Viktor Hovland +2
 +2 thru 4</td>
-      <td class="greyout">Sam Burns +5
-+2 thru 6</td>
+      <td class="greyout">Sam Burns +6
++3 thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Santorini Sunsets</td>
@@ -710,10 +710,10 @@ Not started</td>
 E thru 6</td>
       <td>Jon Rahm +1
 -1 thru 5</td>
-      <td class="greyout leftborder">Jordan Spieth +2
+      <td class="greyout leftborder">Robert MacIntyre +2
++1 thru 12</td>
+      <td class="greyout">Jordan Spieth +2
 E thru 4</td>
-      <td class="greyout">Robert MacIntyre +3
-+2 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Baggy Pants</td>
@@ -776,8 +776,8 @@ Not started</td>
 E thru 4</td>
       <td class="greyout leftborder">Brooks Koepka +3
 E thru 4</td>
-      <td class="greyout">Sam Burns +5
-+2 thru 6</td>
+      <td class="greyout">Sam Burns +6
++3 thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Walk 1</td>
@@ -982,10 +982,10 @@ Not started</td>
 +1 thru 4</td>
       <td>Justin Thomas(W) +4
 Not started</td>
-      <td class="greyout leftborder">Sam Burns +5
-+2 thru 6</td>
-      <td class="greyout">Justin Rose +5
+      <td class="greyout leftborder">Justin Rose +5
 +1 thru 10</td>
+      <td class="greyout">Sam Burns +6
++3 thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Glen Wilson</td>
@@ -1000,8 +1000,8 @@ E thru 5</td>
 E thru 4</td>
       <td class="greyout leftborder">Justin Thomas(W) +4
 Not started</td>
-      <td class="greyout">Sam Burns +5
-+2 thru 6</td>
+      <td class="greyout">Sam Burns +6
++3 thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Kash Ahmad</td>
