--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 11:56:33 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 11:57:16 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -154,22 +154,6 @@ Not started</td>
 Not started</td>
       <td class="greyout">Louis Oosthuizen +4
 Not started</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Walk 2</td>
-      <td class="bigbold">-11</td>
-      <td>Cameron Smith -4
-Not started</td>
-      <td>Corey Conners -3
--1 thru 10</td>
-      <td>Scottie Scheffler -3
-Not started</td>
-      <td>Tyrrell Hatton -1
--1 thru 6</td>
-      <td class="greyout leftborder">Viktor Hovland(W) +2
-+2 thru 4</td>
-      <td class="greyout">Sam Burns +6
-+3 thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Paxton Watson</td>
@@ -202,6 +186,22 @@ E thru 5</td>
 +2 thru 4</td>
       <td class="greyout">Xander Schauffele(W) +3
 +1 thru 4</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Walk 2</td>
+      <td class="bigbold">-10</td>
+      <td>Cameron Smith -4
+Not started</td>
+      <td>Corey Conners -3
+-1 thru 10</td>
+      <td>Scottie Scheffler -3
+Not started</td>
+      <td>Tyrrell Hatton E
+E thru 7</td>
+      <td class="greyout leftborder">Viktor Hovland(W) +2
++2 thru 4</td>
+      <td class="greyout">Sam Burns +6
++3 thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Luke Watson</td>
@@ -437,7 +437,7 @@ Not started</td>
       <td>Hideki Matsuyama E
 Not started</td>
       <td>Marc Leishman +1
-E thru 7</td>
+E thru 8</td>
       <td class="greyout leftborder">Xander Schauffele +3
 +1 thru 4</td>
       <td class="greyout">Justin Thomas +4
