--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 11:56:33 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 11:57:16 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -188,22 +188,6 @@ Not started</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Derrick Shea</td>
-      <td class="bigbold">-4</td>
-      <td>Corey Conners -3
--1 thru 10</td>
-      <td>Patrick Cantlay -1
-+1 thru 5</td>
-      <td>Tyrrell Hatton -1
--1 thru 6</td>
-      <td>Jon Rahm +1
--1 thru 5</td>
-      <td class="greyout leftborder">Shane Lowry +1
-Not started</td>
-      <td class="greyout">Justin Thomas(W) +4
-Not started</td>
-    </tr>
-    <tr>
       <td class="bigbold">John Nixon</td>
       <td class="bigbold">-4</td>
       <td>Cameron Smith(W) -4
@@ -232,6 +216,22 @@ E thru 5</td>
 Not started</td>
       <td class="greyout leftborder">Brooks Koepka +3
 E thru 4</td>
+      <td class="greyout">Justin Thomas(W) +4
+Not started</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Derrick Shea</td>
+      <td class="bigbold">-3</td>
+      <td>Corey Conners -3
+-1 thru 10</td>
+      <td>Patrick Cantlay -1
++1 thru 5</td>
+      <td>Tyrrell Hatton E
+E thru 7</td>
+      <td>Jon Rahm +1
+-1 thru 5</td>
+      <td class="greyout leftborder">Shane Lowry +1
+Not started</td>
       <td class="greyout">Justin Thomas(W) +4
 Not started</td>
     </tr>
