--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 11:57:16 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 11:57:59 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -236,6 +236,22 @@ E thru 5</td>
 +2 thru 4</td>
     </tr>
     <tr>
+      <td class="bigbold">Albert Selina</td>
+      <td class="bigbold">-8</td>
+      <td>Corey Conners -3
+-1 thru 10</td>
+      <td>Scottie Scheffler -3
+Not started</td>
+      <td>Webb Simpson -1
+E thru 8</td>
+      <td>Will Zalatoris -1
+E thru 5</td>
+      <td class="greyout leftborder">Jon Rahm(W) +1
+-1 thru 5</td>
+      <td class="greyout">Xander Schauffele +3
++1 thru 4</td>
+    </tr>
+    <tr>
       <td class="bigbold">Doug Muir</td>
       <td class="bigbold">-8</td>
       <td>Cameron Smith -4
@@ -282,22 +298,6 @@ Not started</td>
 +1 thru 4</td>
       <td class="greyout">Sam Burns +6
 +3 thru 7</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Albert Selina</td>
-      <td class="bigbold">-7</td>
-      <td>Corey Conners -3
--1 thru 10</td>
-      <td>Scottie Scheffler -3
-Not started</td>
-      <td>Will Zalatoris -1
-E thru 5</td>
-      <td>Webb Simpson E
-+1 thru 7</td>
-      <td class="greyout leftborder">Jon Rahm(W) +1
--1 thru 5</td>
-      <td class="greyout">Xander Schauffele +3
-+1 thru 4</td>
     </tr>
     <tr>
       <td class="bigbold">Santorini Sunrises</td>
