--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 12:14:28 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 12:15:11 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -268,22 +268,6 @@ E thru 5</td>
 +1 thru 5</td>
     </tr>
     <tr>
-      <td class="bigbold">Albert Selina</td>
-      <td class="bigbold">-7</td>
-      <td>Scottie Scheffler -3
-Not started</td>
-      <td>Corey Conners -2
-E thru 11</td>
-      <td>Webb Simpson -1
-E thru 8</td>
-      <td>Will Zalatoris -1
-E thru 6</td>
-      <td class="greyout leftborder">Jon Rahm(W) +1
--1 thru 6</td>
-      <td class="greyout">Xander Schauffele +3
-+1 thru 5</td>
-    </tr>
-    <tr>
       <td class="bigbold">Team Steve</td>
       <td class="bigbold">-7</td>
       <td>Cameron Smith(W) -4
@@ -330,6 +314,22 @@ Not started</td>
 +1 thru 5</td>
       <td class="greyout">Sam Burns +6
 +3 thru 7</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Albert Selina</td>
+      <td class="bigbold">-6</td>
+      <td>Scottie Scheffler -3
+Not started</td>
+      <td>Corey Conners -2
+E thru 11</td>
+      <td>Will Zalatoris -1
+E thru 6</td>
+      <td>Webb Simpson E
++1 thru 9</td>
+      <td class="greyout leftborder">Jon Rahm(W) +1
+-1 thru 6</td>
+      <td class="greyout">Xander Schauffele +3
++1 thru 5</td>
     </tr>
     <tr>
       <td class="bigbold">Santorini Sunrises</td>
