--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 12:23:05 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 12:23:48 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -152,8 +152,8 @@ E thru 7</td>
 +1 thru 7</td>
       <td class="greyout leftborder">Shane Lowry +1
 Not started</td>
-      <td class="greyout">Louis Oosthuizen +4
-Not started</td>
+      <td class="greyout">Louis Oosthuizen
+Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Walk 2</td>
@@ -470,10 +470,10 @@ Not started</td>
 +1 thru 7</td>
       <td>Brooks Koepka +3
 E thru 6</td>
-      <td class="greyout leftborder">Louis Oosthuizen +4
-Not started</td>
-      <td class="greyout">Sam Burns +6
+      <td class="greyout leftborder">Sam Burns +6
 +3 thru 8</td>
+      <td class="greyout">Louis Oosthuizen
+Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Uphill into the Wind</td>
@@ -584,8 +584,8 @@ Not started</td>
 Not started</td>
       <td class="greyout leftborder">Jordan Spieth +1
 -1 thru 6</td>
-      <td class="greyout">Louis Oosthuizen +4
-Not started</td>
+      <td class="greyout">Louis Oosthuizen
+Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Low Golf IQ</td>
@@ -936,8 +936,8 @@ E thru 6</td>
 +1 thru 6</td>
       <td class="greyout leftborder">Justin Thomas(W) +4
 Not started</td>
-      <td class="greyout">Louis Oosthuizen +4
-Not started</td>
+      <td class="greyout">Louis Oosthuizen
+Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">NewCastle Magpies</td>
@@ -1080,8 +1080,8 @@ Not started</td>
 +1 thru 6</td>
       <td class="greyout leftborder">Justin Thomas(W) +4
 Not started</td>
-      <td class="greyout">Louis Oosthuizen +4
-Not started</td>
+      <td class="greyout">Louis Oosthuizen
+Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Tony Muir</td>
@@ -1094,10 +1094,10 @@ Not started</td>
 E thru 6</td>
       <td>Xander Schauffele +3
 +1 thru 6</td>
-      <td class="greyout leftborder">Louis Oosthuizen +4
+      <td class="greyout leftborder">Justin Thomas +4
 Not started</td>
-      <td class="greyout">Justin Thomas +4
-Not started</td>
+      <td class="greyout">Louis Oosthuizen
+Missed Cut</td>
     </tr>
   </tbody>
 </table>
