--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 12:23:05 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 12:23:48 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -358,10 +358,10 @@ E thru 7</td>
 +1 thru 6</td>
       <td>Justin Thomas +4
 Not started</td>
-      <td class="greyout leftborder">Louis Oosthuizen +4
-Not started</td>
-      <td class="greyout">Russell Henley +4
+      <td class="greyout leftborder">Russell Henley +4
 +3 thru 11</td>
+      <td class="greyout">Louis Oosthuizen
+Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Adam Ryan</td>
@@ -376,8 +376,8 @@ Not started</td>
 +1 thru 6</td>
       <td class="greyout leftborder">Justin Thomas(W) +4
 Not started</td>
-      <td class="greyout">Louis Oosthuizen +4
-Not started</td>
+      <td class="greyout">Louis Oosthuizen
+Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
