--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 12:27:23 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 12:28:06 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -597,7 +597,7 @@ Not started</td>
       <td>Shane Lowry(W) +1
 Not started</td>
       <td>Brian Harman +2
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Viktor Hovland +3
 +3 thru 6</td>
       <td class="greyout">Sam Burns +6
