--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 12:32:24 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 12:33:07 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -185,7 +185,7 @@ Not started</td>
       <td class="greyout leftborder">Brooks Koepka +3
 E thru 6</td>
       <td class="greyout">Xander Schauffele +3
-+1 thru 6</td>
++1 thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Paxton Watson</td>
@@ -215,7 +215,7 @@ Not started</td>
       <td>Will Zalatoris E
 +1 thru 7</td>
       <td class="greyout leftborder">Xander Schauffele(W) +3
-+1 thru 6</td>
++1 thru 7</td>
       <td class="greyout">Viktor Hovland +3
 +3 thru 6</td>
     </tr>
@@ -233,7 +233,7 @@ E thru 6</td>
       <td class="greyout leftborder">Brooks Koepka +3
 E thru 6</td>
       <td class="greyout">Xander Schauffele +3
-+1 thru 6</td>
++1 thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Hadrian&#39;s Wall</td>
@@ -263,7 +263,7 @@ Not started</td>
       <td>Jon Rahm(W) +1
 -1 thru 7</td>
       <td class="greyout leftborder">Xander Schauffele +3
-+1 thru 6</td>
++1 thru 7</td>
       <td class="greyout">Sam Burns +6
 +3 thru 8</td>
     </tr>
@@ -281,7 +281,7 @@ Not started</td>
       <td class="greyout leftborder">Jordan Spieth +1
 -1 thru 6</td>
       <td class="greyout">Xander Schauffele +3
-+1 thru 6</td>
++1 thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Team Steve</td>
@@ -329,7 +329,7 @@ Not started</td>
       <td class="greyout leftborder">Jon Rahm(W) +1
 -1 thru 7</td>
       <td class="greyout">Xander Schauffele +3
-+1 thru 6</td>
++1 thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Santorini Sunrises</td>
@@ -425,7 +425,7 @@ Not started</td>
       <td class="greyout leftborder">Brooks Koepka(W) +3
 E thru 6</td>
       <td class="greyout">Xander Schauffele +3
-+1 thru 6</td>
++1 thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Wilson</td>
@@ -441,7 +441,7 @@ Not started</td>
       <td class="greyout leftborder">Jordan Spieth +1
 -1 thru 6</td>
       <td class="greyout">Xander Schauffele +3
-+1 thru 6</td>
++1 thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">BCREAMED</td>
@@ -471,7 +471,7 @@ Not started</td>
       <td>Marc Leishman +2
 +1 thru 10</td>
       <td class="greyout leftborder">Xander Schauffele +3
-+1 thru 6</td>
++1 thru 7</td>
       <td class="greyout">Justin Thomas +4
 Not started</td>
     </tr>
@@ -487,7 +487,7 @@ Not started</td>
       <td>Brooks Koepka +3
 E thru 6</td>
       <td class="greyout leftborder">Xander Schauffele +3
-+1 thru 6</td>
++1 thru 7</td>
       <td class="greyout">Billy Horschel +6
 +4 thru 8</td>
     </tr>
@@ -551,9 +551,25 @@ Not started</td>
       <td>Rory McIlroy(W) +1
 E thru 6</td>
       <td class="greyout leftborder">Xander Schauffele +3
-+1 thru 6</td>
++1 thru 7</td>
       <td class="greyout">Justin Thomas +4
 Not started</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Chris Sinclair</td>
+      <td class="bigbold">-3</td>
+      <td>Corey Conners(W) -3
+-1 thru 12</td>
+      <td>Daniel Berger -1
+Not started</td>
+      <td>Collin Morikawa E
+-1 thru 8</td>
+      <td>Robert MacIntyre +1
+E thru 14</td>
+      <td class="greyout leftborder">Jon Rahm +1
+-1 thru 7</td>
+      <td class="greyout">Jordan Spieth +1
+-1 thru 6</td>
     </tr>
     <tr>
       <td class="bigbold">Barb Wellard</td>
@@ -567,7 +583,7 @@ Not started</td>
       <td>Brooks Koepka +3
 E thru 6</td>
       <td class="greyout leftborder">Xander Schauffele +3
-+1 thru 6</td>
++1 thru 7</td>
       <td class="greyout">Sam Burns +6
 +3 thru 8</td>
     </tr>
@@ -583,7 +599,7 @@ Not started</td>
       <td>Viktor Hovland +3
 +3 thru 6</td>
       <td class="greyout leftborder">Xander Schauffele +3
-+1 thru 6</td>
++1 thru 7</td>
       <td class="greyout">Justin Thomas +4
 Not started</td>
     </tr>
@@ -620,20 +636,20 @@ E thru 6</td>
 +3 thru 6</td>
     </tr>
     <tr>
-      <td class="bigbold">Chris Sinclair</td>
+      <td class="bigbold">Grace</td>
       <td class="bigbold">-2</td>
-      <td>Corey Conners(W) -3
+      <td>Corey Conners -3
 -1 thru 12</td>
-      <td>Daniel Berger -1
-Not started</td>
-      <td>Robert MacIntyre +1
-E thru 14</td>
-      <td>Collin Morikawa +1
-E thru 7</td>
-      <td class="greyout leftborder">Jon Rahm +1
--1 thru 7</td>
-      <td class="greyout">Jordan Spieth +1
--1 thru 6</td>
+      <td>Collin Morikawa E
+-1 thru 8</td>
+      <td>Will Zalatoris E
++1 thru 7</td>
+      <td>Rory McIlroy +1
+E thru 6</td>
+      <td class="greyout leftborder">Xander Schauffele(W) +3
++1 thru 7</td>
+      <td class="greyout">Viktor Hovland +3
++3 thru 6</td>
     </tr>
     <tr>
       <td class="bigbold">New Lu</td>
@@ -647,7 +663,7 @@ Not started</td>
       <td>Brooks Koepka +3
 E thru 6</td>
       <td class="greyout leftborder">Xander Schauffele +3
-+1 thru 6</td>
++1 thru 7</td>
       <td class="greyout">Justin Thomas(W) +4
 Not started</td>
     </tr>
@@ -700,22 +716,6 @@ E thru 6</td>
 +3 thru 8</td>
     </tr>
     <tr>
-      <td class="bigbold">Grace</td>
-      <td class="bigbold">-1</td>
-      <td>Corey Conners -3
--1 thru 12</td>
-      <td>Will Zalatoris E
-+1 thru 7</td>
-      <td>Rory McIlroy +1
-E thru 6</td>
-      <td>Collin Morikawa +1
-E thru 7</td>
-      <td class="greyout leftborder">Xander Schauffele(W) +3
-+1 thru 6</td>
-      <td class="greyout">Viktor Hovland +3
-+3 thru 6</td>
-    </tr>
-    <tr>
       <td class="bigbold">Jabby</td>
       <td class="bigbold">-1</td>
       <td>Corey Conners -3
@@ -748,6 +748,22 @@ E thru 6</td>
 Not started</td>
     </tr>
     <tr>
+      <td class="bigbold">Shane Tummon</td>
+      <td class="bigbold">-1</td>
+      <td>Patrick Cantlay -1
++1 thru 7</td>
+      <td>Tony Finau -1
+Not started</td>
+      <td>Collin Morikawa E
+-1 thru 8</td>
+      <td>Jon Rahm(W) +1
+-1 thru 7</td>
+      <td class="greyout leftborder">Jordan Spieth +1
+-1 thru 6</td>
+      <td class="greyout">Brooks Koepka +3
+E thru 6</td>
+    </tr>
+    <tr>
       <td class="bigbold">Santorini Sunsets</td>
       <td class="bigbold">0</td>
       <td>Scottie Scheffler -3
@@ -759,9 +775,41 @@ E thru 6</td>
       <td>Viktor Hovland +3
 +3 thru 6</td>
       <td class="greyout leftborder">Xander Schauffele +3
-+1 thru 6</td>
++1 thru 7</td>
       <td class="greyout">Justin Thomas(W) +4
 Not started</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Walk 1</td>
+      <td class="bigbold">0</td>
+      <td>Patrick Cantlay -1
++1 thru 7</td>
+      <td>Collin Morikawa E
+-1 thru 8</td>
+      <td>Will Zalatoris E
++1 thru 7</td>
+      <td>Jon Rahm +1
+-1 thru 7</td>
+      <td class="greyout leftborder">Viktor Hovland(W) +3
++3 thru 6</td>
+      <td class="greyout">Xander Schauffele +3
++1 thru 7</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Shane Hosegood</td>
+      <td class="bigbold">0</td>
+      <td>Patrick Cantlay -1
++1 thru 7</td>
+      <td>Collin Morikawa(W) E
+-1 thru 8</td>
+      <td>Hideki Matsuyama E
+Not started</td>
+      <td>Jon Rahm +1
+-1 thru 7</td>
+      <td class="greyout leftborder">Jordan Spieth +1
+-1 thru 6</td>
+      <td class="greyout">Paul Casey
+Out With Injury</td>
     </tr>
     <tr>
       <td class="bigbold">Philip Dale</td>
@@ -775,7 +823,7 @@ Not started</td>
       <td>Brooks Koepka +3
 E thru 6</td>
       <td class="greyout leftborder">Xander Schauffele +3
-+1 thru 6</td>
++1 thru 7</td>
       <td class="greyout">Justin Thomas(W) +4
 Not started</td>
     </tr>
@@ -791,57 +839,25 @@ E thru 6</td>
       <td>Jordan Spieth +1
 -1 thru 6</td>
       <td class="greyout leftborder">Xander Schauffele +3
-+1 thru 6</td>
++1 thru 7</td>
       <td class="greyout">Justin Thomas +4
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Shane Tummon</td>
+      <td class="bigbold">Ez Game Ez Life</td>
       <td class="bigbold">0</td>
-      <td>Patrick Cantlay -1
-+1 thru 7</td>
-      <td>Tony Finau -1
+      <td>Tiger Woods(W) -1
 Not started</td>
-      <td>Jon Rahm(W) +1
--1 thru 7</td>
-      <td>Collin Morikawa +1
-E thru 7</td>
-      <td class="greyout leftborder">Jordan Spieth +1
--1 thru 6</td>
-      <td class="greyout">Brooks Koepka +3
-E thru 6</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Walk 1</td>
-      <td class="bigbold">1</td>
-      <td>Patrick Cantlay -1
-+1 thru 7</td>
+      <td>Collin Morikawa E
+-1 thru 8</td>
       <td>Will Zalatoris E
 +1 thru 7</td>
-      <td>Collin Morikawa +1
-E thru 7</td>
-      <td>Jon Rahm +1
--1 thru 7</td>
-      <td class="greyout leftborder">Viktor Hovland(W) +3
+      <td>Rory McIlroy +1
+E thru 6</td>
+      <td class="greyout leftborder">Viktor Hovland +3
 +3 thru 6</td>
-      <td class="greyout">Xander Schauffele +3
-+1 thru 6</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Shane Hosegood</td>
-      <td class="bigbold">1</td>
-      <td>Patrick Cantlay -1
-+1 thru 7</td>
-      <td>Hideki Matsuyama E
+      <td class="greyout">Justin Thomas +4
 Not started</td>
-      <td>Collin Morikawa(W) +1
-E thru 7</td>
-      <td>Jon Rahm +1
--1 thru 7</td>
-      <td class="greyout leftborder">Jordan Spieth +1
--1 thru 6</td>
-      <td class="greyout">Paul Casey
-Out With Injury</td>
     </tr>
     <tr>
       <td class="bigbold">Roy Jeffrey A</td>
@@ -860,22 +876,6 @@ E thru 6</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Ez Game Ez Life</td>
-      <td class="bigbold">1</td>
-      <td>Tiger Woods(W) -1
-Not started</td>
-      <td>Will Zalatoris E
-+1 thru 7</td>
-      <td>Rory McIlroy +1
-E thru 6</td>
-      <td>Collin Morikawa +1
-E thru 7</td>
-      <td class="greyout leftborder">Viktor Hovland +3
-+3 thru 6</td>
-      <td class="greyout">Justin Thomas +4
-Not started</td>
-    </tr>
-    <tr>
       <td class="bigbold">Al Shulman</td>
       <td class="bigbold">2</td>
       <td>Daniel Berger -1
@@ -887,7 +887,7 @@ Not started</td>
       <td>Viktor Hovland +3
 +3 thru 6</td>
       <td class="greyout leftborder">Xander Schauffele +3
-+1 thru 6</td>
++1 thru 7</td>
       <td class="greyout">Justin Thomas(W) +4
 Not started</td>
     </tr>
@@ -905,7 +905,7 @@ Not started</td>
       <td class="greyout leftborder">Brooks Koepka +3
 E thru 6</td>
       <td class="greyout">Xander Schauffele +3
-+1 thru 6</td>
++1 thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Fred Jamieson</td>
@@ -921,45 +921,29 @@ E thru 6</td>
       <td class="greyout leftborder">Brooks Koepka +3
 E thru 6</td>
       <td class="greyout">Xander Schauffele +3
-+1 thru 6</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Wylie</td>
-      <td class="bigbold">3</td>
-      <td>Scottie Scheffler -3
-Not started</td>
-      <td>Will Zalatoris E
 +1 thru 7</td>
-      <td>Brooks Koepka +3
-E thru 6</td>
-      <td>Xander Schauffele +3
-+1 thru 6</td>
-      <td class="greyout leftborder">Justin Thomas(W) +4
-Not started</td>
-      <td class="greyout">Louis Oosthuizen
-Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">NewCastle Magpies</td>
-      <td class="bigbold">4</td>
+      <td class="bigbold">3</td>
       <td>Patrick Cantlay -1
 +1 thru 7</td>
-      <td>Collin Morikawa +1
-E thru 7</td>
+      <td>Collin Morikawa E
+-1 thru 8</td>
       <td>Jordan Spieth +1
 -1 thru 6</td>
       <td>Brooks Koepka +3
 E thru 6</td>
       <td class="greyout leftborder">Xander Schauffele +3
-+1 thru 6</td>
++1 thru 7</td>
       <td class="greyout">Justin Thomas(W) +4
 Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">4</td>
-      <td>Collin Morikawa +1
-E thru 7</td>
+      <td class="bigbold">3</td>
+      <td>Collin Morikawa E
+-1 thru 8</td>
       <td>Jon Rahm +1
 -1 thru 7</td>
       <td>Patrick Reed +1
@@ -973,11 +957,11 @@ E thru 6</td>
     </tr>
     <tr>
       <td class="bigbold">Downhill Down Wind</td>
-      <td class="bigbold">4</td>
+      <td class="bigbold">3</td>
       <td>Tiger Woods -1
 Not started</td>
-      <td>Collin Morikawa(W) +1
-E thru 7</td>
+      <td>Collin Morikawa(W) E
+-1 thru 8</td>
       <td>Rory McIlroy +1
 E thru 6</td>
       <td>Viktor Hovland +3
@@ -986,6 +970,22 @@ E thru 6</td>
 Not started</td>
       <td class="greyout">Gary Woodland +6
 +3 thru 13</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Wylie</td>
+      <td class="bigbold">3</td>
+      <td>Scottie Scheffler -3
+Not started</td>
+      <td>Will Zalatoris E
++1 thru 7</td>
+      <td>Brooks Koepka +3
+E thru 6</td>
+      <td>Xander Schauffele +3
++1 thru 7</td>
+      <td class="greyout leftborder">Justin Thomas(W) +4
+Not started</td>
+      <td class="greyout">Louis Oosthuizen
+Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Hasbulla</td>
@@ -999,7 +999,7 @@ E thru 6</td>
       <td>Brooks Koepka +3
 E thru 6</td>
       <td class="greyout leftborder">Xander Schauffele +3
-+1 thru 6</td>
++1 thru 7</td>
       <td class="greyout">Justin Thomas +4
 Not started</td>
     </tr>
@@ -1011,7 +1011,7 @@ Not started</td>
       <td>Rory McIlroy +1
 E thru 6</td>
       <td>Xander Schauffele +3
-+1 thru 6</td>
++1 thru 7</td>
       <td>Justin Thomas(W) +4
 Not started</td>
       <td class="greyout leftborder">Sam Burns +6
@@ -1063,7 +1063,7 @@ Not started</td>
       <td>Brooks Koepka +3
 E thru 6</td>
       <td class="greyout leftborder">Xander Schauffele +3
-+1 thru 6</td>
++1 thru 7</td>
       <td class="greyout">Justin Thomas(W) +4
 Not started</td>
     </tr>
@@ -1077,7 +1077,7 @@ Not started</td>
       <td>Viktor Hovland +3
 +3 thru 6</td>
       <td>Xander Schauffele +3
-+1 thru 6</td>
++1 thru 7</td>
       <td class="greyout leftborder">Justin Thomas(W) +4
 Not started</td>
       <td class="greyout">Louis Oosthuizen
@@ -1093,7 +1093,7 @@ Missed Cut</td>
       <td>Brooks Koepka +3
 E thru 6</td>
       <td>Xander Schauffele +3
-+1 thru 6</td>
++1 thru 7</td>
       <td class="greyout leftborder">Justin Thomas +4
 Not started</td>
       <td class="greyout">Louis Oosthuizen
