--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 12:32:24 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 12:33:07 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -151,7 +151,7 @@ Not started</td>
       <td>Jordan Spieth +1
 -1 thru 6</td>
       <td class="greyout leftborder">Xander Schauffele +3
-+1 thru 6</td>
++1 thru 7</td>
       <td class="greyout">Sam Burns +6
 +3 thru 8</td>
     </tr>
@@ -170,6 +170,22 @@ Not started</td>
 Not started</td>
       <td class="greyout">Justin Thomas(W) +4
 Not started</td>
+    </tr>
+    <tr>
+      <td class="bigbold">John Nixon</td>
+      <td class="bigbold">-4</td>
+      <td>Cameron Smith(W) -4
+Not started</td>
+      <td>Patrick Cantlay -1
++1 thru 7</td>
+      <td>Collin Morikawa E
+-1 thru 8</td>
+      <td>Rory McIlroy +1
+E thru 6</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+E thru 6</td>
+      <td class="greyout">Xander Schauffele +3
++1 thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
@@ -204,20 +220,20 @@ Not started</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">John Nixon</td>
+      <td class="bigbold">Scott Williamson</td>
       <td class="bigbold">-3</td>
-      <td>Cameron Smith(W) -4
-Not started</td>
+      <td>Sungjae Im -5
+E thru 9</td>
       <td>Patrick Cantlay -1
 +1 thru 7</td>
-      <td>Collin Morikawa +1
-E thru 7</td>
-      <td>Rory McIlroy +1
-E thru 6</td>
+      <td>Collin Morikawa E
+-1 thru 8</td>
+      <td>Viktor Hovland(W) +3
++3 thru 6</td>
       <td class="greyout leftborder">Brooks Koepka +3
 E thru 6</td>
-      <td class="greyout">Xander Schauffele +3
-+1 thru 6</td>
+      <td class="greyout">Justin Thomas +4
+Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Paxton Watson</td>
@@ -236,6 +252,22 @@ Not started</td>
 Not started</td>
     </tr>
     <tr>
+      <td class="bigbold">Chris Sinclair</td>
+      <td class="bigbold">-3</td>
+      <td>Corey Conners(W) -3
+-1 thru 12</td>
+      <td>Daniel Berger -1
+Not started</td>
+      <td>Collin Morikawa E
+-1 thru 8</td>
+      <td>Jon Rahm +1
+-1 thru 7</td>
+      <td class="greyout leftborder">Jordan Spieth +1
+-1 thru 6</td>
+      <td class="greyout">Robert MacIntyre +1
+E thru 14</td>
+    </tr>
+    <tr>
       <td class="bigbold">Neil Hardy</td>
       <td class="bigbold">-3</td>
       <td>Cameron Smith(W) -4
@@ -247,41 +279,25 @@ Not started</td>
       <td>Viktor Hovland +3
 +3 thru 6</td>
       <td class="greyout leftborder">Xander Schauffele +3
-+1 thru 6</td>
-      <td class="greyout">Justin Thomas +4
-Not started</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Scott Williamson</td>
-      <td class="bigbold">-2</td>
-      <td>Sungjae Im -5
-E thru 9</td>
-      <td>Patrick Cantlay -1
 +1 thru 7</td>
-      <td>Collin Morikawa +1
-E thru 7</td>
-      <td>Viktor Hovland(W) +3
-+3 thru 6</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 6</td>
       <td class="greyout">Justin Thomas +4
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Chris Sinclair</td>
+      <td class="bigbold">Al Shulman</td>
       <td class="bigbold">-2</td>
-      <td>Corey Conners(W) -3
--1 thru 12</td>
+      <td>Tony Finau -1
+Not started</td>
       <td>Daniel Berger -1
 Not started</td>
-      <td>Collin Morikawa +1
-E thru 7</td>
-      <td>Jon Rahm +1
--1 thru 7</td>
-      <td class="greyout leftborder">Jordan Spieth +1
--1 thru 6</td>
-      <td class="greyout">Robert MacIntyre +1
-E thru 14</td>
+      <td>Collin Morikawa E
+-1 thru 8</td>
+      <td>Will Zalatoris E
++1 thru 7</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+E thru 6</td>
+      <td class="greyout">Justin Thomas(W) +4
+Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
@@ -316,32 +332,16 @@ Not started</td>
 E thru 6</td>
     </tr>
     <tr>
-      <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">-1</td>
-      <td>Tony Finau -1
-Not started</td>
-      <td>Daniel Berger -1
-Not started</td>
-      <td>Will Zalatoris E
-+1 thru 7</td>
-      <td>Collin Morikawa +1
-E thru 7</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 6</td>
-      <td class="greyout">Justin Thomas(W) +4
-Not started</td>
-    </tr>
-    <tr>
       <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">0</td>
+      <td class="bigbold">-1</td>
       <td>Patrick Cantlay -1
 +1 thru 7</td>
       <td>Tony Finau -1
 Not started</td>
+      <td>Collin Morikawa E
+-1 thru 8</td>
       <td>Jon Rahm(W) +1
 -1 thru 7</td>
-      <td>Collin Morikawa +1
-E thru 7</td>
       <td class="greyout leftborder">Jordan Spieth +1
 -1 thru 6</td>
       <td class="greyout">Brooks Koepka +3
@@ -355,7 +355,7 @@ E thru 8</td>
       <td>Corey Conners -3
 -1 thru 12</td>
       <td>Xander Schauffele(W) +3
-+1 thru 6</td>
++1 thru 7</td>
       <td>Justin Thomas +4
 Not started</td>
       <td class="greyout leftborder">Russell Henley +4
@@ -373,7 +373,7 @@ Missed Cut</td>
       <td>Jordan Spieth +1
 -1 thru 6</td>
       <td>Xander Schauffele +3
-+1 thru 6</td>
++1 thru 7</td>
       <td class="greyout leftborder">Justin Thomas(W) +4
 Not started</td>
       <td class="greyout">Louis Oosthuizen
@@ -381,11 +381,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">6</td>
+      <td class="bigbold">5</td>
+      <td>Collin Morikawa E
+-1 thru 8</td>
       <td>Jon Rahm +1
 -1 thru 7</td>
-      <td>Collin Morikawa +1
-E thru 7</td>
       <td>Patrick Reed +1
 -1 thru 11</td>
       <td>Viktor Hovland(W) +3
